@@ -29,6 +29,7 @@ $a_user_prefs = array(
   'htmleditor'   => isset($_POST['_htmleditor']) ? TRUE : FALSE,
   'inline_images'   => isset($_POST['_inline_images']) ? TRUE : FALSE,
   'preview_pane' => isset($_POST['_preview_pane']) ? TRUE : FALSE,
+  'display_next' => isset($_POST['_display_next']) ? TRUE : FALSE,
   'focus_on_new_message' => isset($_POST['_focus_on_new_message']) ? TRUE : FALSE,
   'read_when_deleted' => isset($_POST['_read_when_deleted']) ? TRUE : FALSE,
   'skip_deleted' => isset($_POST['_skip_deleted']) ? TRUE : FALSE,
